apps/static/css/readux2/main.scss
/* ... */
.footer-links a {
    color: white;
    text-decoration: none;
}

.footer-links a:hover {
    text-decoration: underline;
}

.footer-logo {
    display: flex;
    align-items: center;
}

.footer-logo svg {
    width: 50px;
    height: 50px;
}

.footer-bottom {
    text-align: left;
    margin-top: 10px;
    color: white;
}

/* highlight section */
.three-column-section {
    padding: 50px 0;
    text-align: center;
}

.column {
    background-color: #F1FAEE;
    padding: 2rem;
    border-radius: 8px;
    text-align: center;
    position: relative;
}

.blob {
    background-color: #FFFFFF;
    width: 80px;
    height: 80px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
}

.icon-placeholder {
    width: 40px;
    height: 40px;
    fill: #457B9D;
}

.column-text {
    margin-top: 4rem;
    color: #1D3557;
    font-size: 1.75rem;
    line-height: 2.5rem;
}

.section-title {
    color: #1D3557;
    font-size: 2em;
    font-weight: bold;
    margin-bottom: 4rem;
}

.brand-logo {
    font-size: large;
    color: white;
    font-weight: bold;
}

.brand-tagline {
    font-size: small;
    color: white;
}

.description-button {
    transition: ease 0.1s;

    &:hover {
        background-color: darken(#E60000, 10%);
    }

    &:active {
        background-color: darken(#E60000, 25%);
    }
}

.justify-content-normal {
    justify-content: normal !important;
}

.unset-min-height {
    min-height: unset !important;
}

button.google {
    background-color: #ea4335;
    color: white;
}


button.github {
    background-color: #24292e;
    color: white;
}

